@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.3 2003/09/02 12:19:36 abs Exp $
+# $NetBSD: Makefile,v 1.4 2003/09/04 13:07:16 abs Exp $
 
 DISTNAME=	exim-${EXIM_VERSION}
 PKGNAME=	exim-exiscan-${EXIM_VERSION}-${EXISCAN_VERSION}
-PKGREVISION=	1
 CATEGORIES=	mail net
 
 MAINTAINER=	abs@NetBSD.org
@@ -12,7 +11,7 @@ COMMENT=	The Exim mail transfer agent, with exiscan-acl patches
 DEPENDS+=	exim-user>=1.0:../../mail/exim-user
 CONFLICTS+=	exim-[0-9]*
 
-EXISCAN_VERSION=11
+EXISCAN_VERSION=12
 
 PATCH_SITES=    http://duncanthrax.net/exiscan-acl/
 PATCHFILES=     exiscan-acl-${EXIM_VERSION}-${EXISCAN_VERSION}.patch
